[package]
name = "consistent-hash"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.24"
env_logger = "0.10.0"
hash_ring = "0.2.0"
log = "0.4.17"
serde =   { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
 